[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strongmind_deployment_beta"
version = "2.0.0-dev"

authors = [
  { name="Belding", email="teambelding@strongmind.com" },
]
description = "Deployment tools for Strongmind"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pulumi",
    "pulumi-aws",
    "pulumi-awsx",
    "pulumi-random",
    "boto3",
]

[project.urls]
"Homepage" = "https://github.com/strongmind/public-reusable-workflows/tree/main/deployment"

# optional: only required for beta release.
[tool.hatch.build.targets.wheel]
packages = ["deployment/strongmind_deployment"]
