[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strongmind_deployment"
dynamic = ["version"]

authors = [
  { name="Belding", email="teambelding@strongmind.com" },
]
description = "Deployment tools for Strongmind"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pulumi",
    "pulumi-aws",
    "pulumi-awsx",
    "pulumi-random",
    "boto3",
    "setuptools",
]

[project.urls]
"Homepage" = "https://github.com/strongmind/public-reusable-workflows/tree/main/deployment"

[tool.hatch.version]
path = "__version__.py"

